2008-08-12  Esteban Sanchez <estebans@artica.es>

	* godmode/db/db_purge.php: Use print_help_tip() to show help tip.

	* godmode/profiles/profile_list.php: Use print_help_tip(). Removed
	deprecated $help_label.

	* godmode/users/configure_user.php: Better code to show user level
	radio buttons and help.

	* include/functions_db.php: Removed deprecated function
	load_lang_file().

	* operation/agentes/datos_agente.php, ajax.php,
	operation/reporting/reporting_viewer_pdf.php, reporting/stat_win.php,
	operation/agentes/exportdata.php: Removed inclusion of old
	language files.

	* include/languages/index.pot: Regenerated and added header.

2008-08-12  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* operation/menu.php: Made short tag, normal tag

	* include/functions.php: Got rid of references to language files

	* godmode/servers/plugin.php: Made proper english

	* godmode/servers/manage_recontask.php: Made proper HTML

	* godmode/profiles/profile_list.php: Translation of help strings

	* godmode/agentes/manage_config_remote.php: Fixed typo that generated errors

2008-08-12  Esteban Sanchez <estebans@artica.es>

	* pandoradb_data.sql: Added default languages.

	* include/streams.php, include/gettext.php: Added to repository. New
	files to add gettext support of mo files.
	
	* include/functions_db.php: Function lang_string() functionallity
	changed to use gettext library.

	* include/languages/language_es_es.php,
	include/languages/language_gl.php, include/languages/language_en.php,
	include/languages/language_pt_br.php,
	include/languages/language_it.php,
	include/languages/language_ast_es.php,
	include/languages/language_es_la.php,
	include/languages/language_de.php, include/languages/language_fr.php,
	include/languages/language_ca.php: Files deleted, they are
	deprecated since we have moved to gettext.

	* lude/languages/pt_br.mo, include/languages/es.mo,
	include/languages/fr.po, include/languages/it.po,
	include/languages/ca.po, include/languages/ast.po,